# named-sop

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  named-sop.cabal
src/Data/NamedSOP/: Generic.hs  Map.hs  Sum.hs  Type.hs
test/: Tests.hs
