cabal-version:       2.0
name:                named-sop
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Sam Schweigel
maintainer:          s.schweigel@gmail.com
category:            Data
build-type:          Simple

library
  exposed-modules:     Data.NamedSOP.Type
                     , Data.NamedSOP.Map
                     , Data.NamedSOP.Sum
                     , Data.NamedSOP.Generic
  build-depends:       base ^>= 4.12.0.0
                     , singletons ^>= 2.5.1
                     , text ^>= 1.2.3.1
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror=incomplete-patterns
